# ci-workflows

./: .env.example  .gitignore  .gitleaks.toml  .ruff.toml  Makefile  README.md  callers.yml  conftest.py  pyproject.toml
.github/: actionlint.yaml
.github/workflows/: ci.yml
bot/: .env.example  Makefile  README.md  forgejo-runner-notify  forgejo-runner-notify.service
src/ci_workflows/: drift.py  forgejo.py  provision_secrets.py  registry.py  render.py  retry_ci.py  sync.py
templates/_snippets/: install_deps_bare.yml  install_deps_uv.yml  notify_on_failure.yml  retry_setup.yml  setup_uv.yml
templates/docs-static/: ci.yml  gitleaks-sweep.yml
templates/python-app/: ci.yml  gitleaks-sweep.yml
tests/: test_drift.py  test_forgejo.py  test_provision_secrets.py  test_regenerate_readme_badges.py  test_registry.py  test_render.py  test_render_include.py  test_retry_ci.py  test_sync.py
tests/fixtures/: callers.minimal.yml  callers.multi-pilot.yml  readme_canonical.md  readme_ci_only.md  readme_duplicate_stale.md  readme_foreign_repo_ci_badge.md  readme_h1_no_blank_line.md  readme_mixed_stale_and_non_ci.md  readme_no_badges.md  readme_no_h1.md  readme_stale_only.md  readme_sweep_only.md  readme_unknown_workflow.md  rendered-docs-static-ci.v2.yml  rendered-docs-static-sweep.v2.min49.yml  rendered-python-app-sweep.v2.heavy.min35.yml  rendered-python-app-sweep.v2.min17.yml
tests/fixtures/forgejo_responses/: repo_get.json  tasks_list_green.json  tasks_list_red.json
tests/fixtures/python-app/: ci_v3_example-app.yml  ci_v3_example-heavy-heavy.yml
(+5 files in other folders)
